--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>D3 v4</title>
-  <script src="//d3js.org/d3.v4.min.js"></script>
+  <script src="node_modules/d3/build/d3.js"></script>
+  <style>
+    .chart {
+      background: lightgray;
+      border: 1px solid black;
+      min-width: 200px;
+      min-height: 350px;
+    }
+  </style>
 </head>
 <body>
+  <div class="chart">
+    <div>Billy</div>
+    <div>Cindy</div>
+  </div>
+
   <script src="src/app.js"></script>
 </body>
 </html>
