--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     .chart {
       background: lightgray;
       border: 1px solid black;
-      min-width: 425px;
-      min-height: 625px;
+/*      min-width: 400px;
+      min-height: 600px;*/
     }
   </style>
 </head>
