--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     .chart {
       background: lightgray;
       border: 1px solid black;
-/*      min-width: 400px;
-      min-height: 600px;*/
+    }
+    rect {
+      fill: steelblue;
+    }
+    rect:hover {
+      fill: turquoise;
     }
   </style>
 </head>
