--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       background: lightgray;
       border: 1px solid black;
     }
+    .ball{
+      fill: steelblue;
+      fill-opacity: 0.35;
+      stroke: steelblue;
+      stroke-width: 2;
+    }
+    .ball:hover {
+      fill: orange;
+    }
   </style>
 </head>
 <body>
