--- a/index.html
+++ b/index.html
@@ -5,23 +5,16 @@
   <title>D3 v4</title>
   <script src="node_modules/d3/build/d3.js"></script>
   <style>
-    .chart {
+    #block {
       background: lightgray;
       border: 1px solid black;
-    }
-    .ball{
-      fill: steelblue;
-      fill-opacity: 0.35;
-      stroke: steelblue;
-      stroke-width: 2;
-    }
-    .ball:hover {
-      fill: orange;
+      width: 100px;
+      height: 100px;
     }
   </style>
 </head>
 <body>
-  <div class="chart"></div>
+  <div id="block"></div>
 
   <script src="src/app.js"></script>
 </body>
