--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
   <title>D3 v4</title>
   <script src="node_modules/d3/build/d3.js"></script>
   <style>
-    #block {
+    .block {
       background: lightgray;
       border: 1px solid black;
-      width: 100px;
-      height: 100px;
+      width: 50px;
+      height: 50px;
+      margin-bottom: 1em;
     }
   </style>
 </head>
 <body>
-  <div id="block"></div>
+  <div class="block a"></div>
+  <div class="block b"></div>
+
+<!--   <button onclick="go()">Go</button>
+  <button onclick="goNow()">Go Now</button> -->
 
   <script src="src/app.js"></script>
 </body>
